# AegisOS

./: .gitignore  CHANGELOG.md  CMakeLists.txt  COLLABORATORS.md  CONTRIBUTING.md  EXPLAIN.md  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-docs.yml  ci.yml  clang-tests.yml  docs.yml  packages.yml  project-automation.yml
docs/: ARCHITECTURE.md  BRANCH_PROTECTION.md  FEATURE_MATRIX.md  IMPLEMENTATION_PLAN.md  ONBOARDING.md  PRODUCT_PRINCIPLES.md  PROFILE_COMPATIBILITY.md  ROADMAP.md  SECURITY_MODEL.md  VISION.md
kernel/: README.md
kernel/include/: kernel.h
kernel/src/: kernel_main.c
platform/: README.md
scripts/: README.md  atomic_update_txn.py  bootstrap.bat  bootstrap.ps1  bootstrap.sh  compat_runtime_allowlist.py  configure_branch_protection.py  device_profile_boot_budget_enforcer.py  generate_audit_retention_manifest.py  migrate_package_manifests.py  migrate_policies_batch.py  onboarding_check.py  run_clang_suite.py  telemetry_redaction_engine.py  update_project_docs.py  validate_packages.py  validate_repo_index.py
tests/: atomic_update_txn_test.py  audit_retention_manifest_test.py  capability_test.c  compat_runtime_allowlist_test.py  device_profile_boot_budget_enforcer_test.py  kernel_sim_test.c  migrate_package_manifests_test.py  migrate_policies_batch_test.py  package_delta_manifest_schema_test.py  repository_index_trust_policy_test.py  sandbox_engine_test.c  sandbox_policy_test.c  telemetry_redaction_engine_test.py
tools/: README.md
userland/: README.md
userland/include/: capability.h  sandbox_engine.h  sandbox_policy.h
userland/security/: capability.c  sandbox_engine.c  sandbox_policy.c
